--- a/Booking_Ticket_FE/src/Home/Home.module.css
+++ b/Booking_Ticket_FE/src/Home/Home.module.css
@@ -32,7 +32,7 @@
 }
 
 .tab.active {
-    color: blue;
+    color: #0d6efd !important;
 }
 
 .tab.active::after {
@@ -42,7 +42,7 @@
     left: 0;
     height: 3px;
     width: 100%;
-    background-color: blue;
+    background-color: #0d6efd;
     transition: all 0.3s ease-out;
 }
 
