--- a/Booking_Ticket_FE/src/Movies/Movies.module.css
+++ b/Booking_Ticket_FE/src/Movies/Movies.module.css
@@ -46,3 +46,10 @@
   text-decoration: underline;
 }
 
+.ellipsis {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  max-width: 100%;
+  display: block;
+}
