--- a/Booking_Ticket_FE/src/Home/Home.module.css
+++ b/Booking_Ticket_FE/src/Home/Home.module.css
@@ -55,3 +55,10 @@
   color: #0d6efd;    
   text-decoration: underline;
 }
+.ellipsis {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  max-width: 100%;
+  display: block;
+}
