--- a/Booking_Ticket_FE/src/Booking/Booking.css
+++ b/Booking_Ticket_FE/src/Booking/Booking.css
@@ -42,19 +42,14 @@
   color: #fff;
 }
 
-.seat.held {
-  background-color: #00bfff;
+.seat.normal.selected {
+  background-color: #0d6efd;
   color: #fff;
 }
 
 .seat.sold {
-  background-color: #ff4d4f;
+  background-color: #dd1a1d;
   color: #fff;
-}
-
-.seat.booked {
-  background-color: #ffc107;
-  color: #000;
 }
 
 .legend {
