--- a/Booking_Ticket_FE/src/Movies/Movies.module.css
+++ b/Booking_Ticket_FE/src/Movies/Movies.module.css
@@ -4,6 +4,16 @@
 
 }
 
+.topblack {
+    height: 40px;
+    width: 100%;
+    background-color: black;
+}
+.banner img {
+    max-height: 700px;
+    object-fit: cover;
+}
+
 .tab-wrapper {
     display: flex;
     justify-content: center;
@@ -22,7 +32,7 @@
 }
 
 .tab.active {
-    color: blue;
+    color: #0d6efd !important;
 }
 
 .tab.active::after {
@@ -32,7 +42,7 @@
     left: 0;
     height: 3px;
     width: 100%;
-    background-color: blue;
+    background-color: #0d6efd;
     transition: all 0.3s ease-out;
 }
 
@@ -45,11 +55,25 @@
   color: #0d6efd;    
   text-decoration: underline;
 }
-
 .ellipsis {
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
   max-width: 100%;
   display: block;
+}
+
+.showtime {
+  background-color: #f8f9fa;
+  cursor: pointer;
+  transition: background-color 0.2s, transform 0.2s;
+  min-width: 120px;
+  text-align: center;
+  padding: 12px 16px;
+  border: 1px solid #dee2e6;
+  border-radius: 8px;
+}
+
+.showtime:hover {
+  background-color: #0d6efd;
 }
